docs(site): add typescript sdk, deployment guides, and synchronize roadmap
- Add comprehensive TypeScript SDK documentation covering cognitive verbs, SSE, and runtimes
- Modernize Python SDK guide with spector-client details, sync/async APIs, and SSE
- Add deployment guides for Docker Compose (profiles), Kubernetes Helm, and Terraform multi-cloud
- Update getting started and installation guides with 30s paths, NPX, brew, scoop, and curl
- Synchronize MkDocs navigation and mark Phases 1-3 completed in docs/roadmap.md

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>