@@ -1,253 +1,145 @@
 ---
-title: "Quick Start — Build and Search in 5 Minutes"
-description: "Get Spector running in 5 minutes. Build from source, start the server, ingest documents, and run your first hybrid vector + keyword search."
+title: "Quick Start — 30 Seconds to First Memory"
+description: "Get started with Spector in 30 seconds: NPX runner for AI agents, Python/TypeScript SDKs, Docker Compose, or standalone CLI."
 ---
 
-# 🚀 Getting Started
+# 🚀 Quick Start — 30 Seconds to First Memory
 
-> **Go from zero to your first search result in under 5 minutes.** This guide walks you through building Spector from source, starting the server, ingesting documents, and running your first hybrid search.
-
----
-
-## 📋 Prerequisites
-
-| Tool | Version | How to Check |
-|------|---------|-------------|
-| ☕ JDK | 25+ | `java -version` |
-| 📦 Maven | 3.9+ | `mvn --version` |
-| 🔧 Git | 2.40+ | `git --version` |
-
-> [!IMPORTANT]
-> Spector requires **JDK 25 or later** with the Vector API incubator module. [OpenJDK builds](https://jdk.java.net/) include this by default.
+> **Store and recall your first AI agent memory in seconds.** Choose your preferred path below.
 
 ---
 
-## 🏗️ Clone and Build
+## Path 1: Zero-Install AI Agent MCP (No Setup Required)
+
+If you are connecting Spector to **Claude Desktop**, **Cursor**, **Windsurf**, or **Claude Code**, run the zero-install launcher:
+
+```bash
+npx -y @spectrayan/spector mcp
+```
+
+This connects directly to your local Spector node if one is running, or automatically boots an in-process memory kernel with embedded ONNX neural embeddings.
+
+---
+
+## Path 2: Python Client SDK
+
+Install the lightweight client SDK:
+
+```bash
+pip install spector-client
+```
+
+Store and recall memories with authentic cognitive verbs:
+
+```python
+from spector_client import SpectorClient, MemoryTier
+
+# Connect to running daemon or local test instance
+client = SpectorClient.builder().with_rest("http://localhost:7070").build()
+
+# 1. Remember
+record = client.memory.remember(
+    text="User is designing a low-latency RAG system with pgvector and Spector",
+    tier=MemoryTier.SEMANTIC,
+    tags=["rag", "architecture", "database"],
+    interest=0.9,
+    valence=1,
+)
+print(f"Memory recorded: {record.id}")
+
+# 2. Recall with associative cognitive scoring
+memories = client.memory.recall("database architecture preferences", top_k=3)
+for memory in memories:
+    print(f"[{memory.id}] score={memory.score:.4f} | {memory.text}")
+```
+
+---
+
+## Path 3: Universal TypeScript / Node.js SDK
+
+Install via npm:
+
+```bash
+npm install @spectrayan/spector-client
+```
+
+Run in Node.js 18+, Bun, or Deno:
+
+```typescript
+import { SpectorClient, MemoryTier } from '@spectrayan/spector-client';
+
+const client = SpectorClient.createDefault('http://localhost:7070');
+
+async function main() {
+  // Store
+  const record = await client.memory.remember({
+    text: 'User prefers dark mode, high contrast, and TypeScript examples',
+    tier: MemoryTier.SEMANTIC,
+    tags: ['preferences', 'ui'],
+  });
+
+  // Recall
+  const results = await client.memory.recall({
+    query: 'user ui preferences',
+    topK: 5,
+  });
+
+  results.forEach(m => console.log(`[${m.id}] ${m.text}`));
+}
+
+main();
+```
+
+---
+
+## Path 4: Instant Local Server (Docker Compose)
+
+Start the Spector memory daemon with a single command:
 
 ```bash
 # Clone the repository
 git clone https://github.com/spectrayan/spector.git
 cd spector
 
-# Build all modules (includes 316+ tests)
-mvn clean test
+# Start core daemon (REST + SSE on port :7070)
+docker compose up -d
 
-# Build without tests (faster)
-mvn clean package -DskipTests
+# Check health
+curl http://localhost:7070/actuator/health
 ```
 
-> [!TIP]
-> The full test suite runs 316+ tests across all modules. Expect ~2 minutes on a modern machine.
-
----
-
-## 🔬 Verify SIMD Support
-
-Confirm your hardware's SIMD acceleration level:
-
+To launch the 3D Neural Galaxy UI (Cortex):
 ```bash
-java --add-modules jdk.incubator.vector -cp spector-core/target/classes \
-  com.spectrayan.spector.core.SimdCapability
-```
-
-Expected output (varies by hardware):
-```
-SIMD Species: S_256_BIT (AVX2, 8 float lanes)
+docker compose --profile ui up -d
+# Open http://localhost in your browser
 ```
 
 ---
 
-## 🖥️ Start the Server
+## Path 5: One-Line CLI Installers
 
-Start the unified server using the packaged distribution JAR:
+Install the standalone `spector` CLI binary on your machine:
 
+=== "Linux / macOS (POSIX)"
+    ```bash
+    curl -fsSL https://raw.githubusercontent.com/spectrayan/spector/main/scripts/install.sh | sh
+    ```
+
+=== "Windows (PowerShell)"
+    ```powershell
+    irm https://raw.githubusercontent.com/spectrayan/spector/main/scripts/install.ps1 | iex
+    ```
+
+Verify your environment:
 ```bash
-java --add-modules jdk.incubator.vector \
-  --enable-native-access=ALL-UNNAMED --enable-preview \
-  -jar synapse/spector-cli/target/spector.jar mcp \
-  --config spector.yml
-```
-
-Verify it's running:
-
-```bash
-curl http://localhost:7070/health
-```
-
-```json
-{"status": "UP"}
-```
-
-> [!NOTE]
-> The server starts on virtual threads — it can handle thousands of concurrent requests out of the box with no thread pool configuration needed.
-
----
-
-## 📄 Ingest Your First Document
-
-```bash
-curl -X POST http://localhost:7070/api/v1/ingest \
-  -H "Content-Type: application/json" \
-  -d '{
-    "id": "doc-1",
-    "title": "Introduction to Vector Search",
-    "content": "Vector search finds similar items by comparing their mathematical representations called embeddings.",
-    "vector": [0.12, 0.45, 0.78, 0.23, 0.91, 0.34, 0.67, 0.55, 0.11, 0.89]
-  }'
-```
-
-```json
-{"id": "doc-1", "status": "indexed"}
-```
-
-### 🤖 Ingest with Auto-Embedding
-
-If you have Ollama running with an embedding model:
-
-```bash
-curl -X POST http://localhost:7070/api/v1/ingest/auto \
-  -H "Content-Type: application/json" \
-  -d '{
-    "id": "doc-2",
-    "title": "HNSW Algorithm",
-    "content": "Hierarchical Navigable Small World graphs enable fast approximate nearest neighbor search."
-  }'
-```
-
-### 📦 Bulk Ingest
-
-```bash
-curl -X POST http://localhost:7070/api/v1/ingest/bulk \
-  -H "Content-Type: application/json" \
-  -d '{
-    "documents": [
-      {"id": "d1", "content": "BM25 keyword scoring uses term frequency and document length.", "vector": [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]},
-      {"id": "d2", "content": "Reciprocal Rank Fusion combines multiple ranked lists.", "vector": [0.5, 0.4, 0.3, 0.2, 0.1, 0.9, 0.8, 0.7, 0.6, 0.5]}
-    ]
-  }'
+spector doctor
 ```
 
 ---
 
-## 🔍 Run Your First Search
+## Next Steps
 
-### 🧬 Hybrid Search (keyword + vector)
-
-```bash
-curl -X POST http://localhost:7070/api/v1/search \
-  -H "Content-Type: application/json" \
-  -d '{
-    "text": "nearest neighbor search",
-    "vector": [0.15, 0.42, 0.73, 0.28, 0.88, 0.31, 0.62, 0.51, 0.14, 0.85],
-    "topK": 5
-  }'
-```
-
-```json
-{
-  "results": [
-    {
-      "id": "doc-1",
-      "score": 0.9234,
-      "title": "Introduction to Vector Search",
-      "content": "Vector search finds similar items..."
-    }
-  ],
-  "searchMode": "HYBRID",
-  "latencyMs": 0.31
-}
-```
-
-### 📝 Keyword-Only Search
-
-```bash
-curl -X POST http://localhost:7070/api/v1/search \
-  -H "Content-Type: application/json" \
-  -d '{"text": "BM25 scoring", "topK": 10}'
-```
-
-### 🧠 Vector-Only Search
-
-```bash
-curl -X POST http://localhost:7070/api/v1/search \
-  -H "Content-Type: application/json" \
-  -d '{"vector": [0.15, 0.42, 0.73, 0.28, 0.88, 0.31, 0.62, 0.51, 0.14, 0.85], "topK": 10}'
-```
-
----
-
-## 📊 Check Engine Status
-
-```bash
-curl http://localhost:7070/api/v1/status
-```
-
-```json
-{
-  "status": "RUNNING",
-  "simd": "AVX2 (256-bit, 8 lanes)",
-  "gpuAvailable": false,
-  "rerankerEnabled": false,
-  "documentCount": 3,
-  "dimensions": 384
-}
-```
-
----
-
-## 💻 Use as an Embedded Library
-
-No server needed — use Spector directly in your Java application:
-
-```java
-import com.spectrayan.spector.engine.SpectorEngine;
-import com.spectrayan.spector.engine.SpectorConfig;
-
-var config = SpectorConfig.DEFAULT
-    .withDimensions(384)
-    .withCapacity(100_000);
-
-try (var engine = new SpectorEngine(config)) {
-    // Ingest
-    engine.ingest("doc-1", "Hello world", new float[]{0.1f, 0.2f, ...});
-
-    // Search
-    var results = engine.hybridSearch("hello", queryVector, 10);
-
-    for (var result : results.results()) {
-        System.out.printf("%s → %.4f%n", result.id(), result.score());
-    }
-}
-```
-
-> [!TIP]
-> Embedded mode has **zero network overhead** — perfect for microservices, desktop apps, and edge deployments.
-
----
-
-## 🎉 What You've Accomplished
-
-In just a few minutes, you've:
-
-- ✅ Built Spector from source
-
-- ✅ Verified SIMD hardware acceleration
-
-- ✅ Started a search server
-
-- ✅ Ingested documents
-
-- ✅ Run hybrid search queries
-
----
-
-## 🚀 Next Steps
-
-| What to explore | Page |
-|----------------|------|
-| Full API documentation | [REST API Reference](../api-reference/rest-endpoints.md) |
-| Type-safe Java client | [Java SDK Guide](../sdk-usage/java-client.md) |
-| Tune for your workload | [Configuration Guide](../configuration/parameters.md) |
-| Command-line management | [CLI Reference](../cli-reference/spectorctl.md) |
-| Understand the internals | [Architecture Overview](../architecture/overview.md) |
-| Spring AI integration | [Spring AI Integration](../sdk-usage/spring-ai.md) |
+- 🔷 [**TypeScript SDK Guide**](../sdk-usage/typescript-sdk.md) — Explore full async APIs and event streaming
+- 🐍 [**Python SDK Guide**](../sdk-usage/python-sdk.md) — Learn how to build agentic memory loops
+- 🤖 [**MCP Server Configuration**](../sdk-usage/mcp-server.md) — Configure Cursor, Claude, and Windsurf
+- 🐳 [**Docker & Compose Guide**](../deployment/docker.md) — Profiles, volumes, and GPU options
